Fixed firefox toolbar veritcal align issue by assigning vertical-align:top to .mapbox-ctrl-group.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,10 @@ header {
   left: 7vw;
 }
 
+#toolbar .mapbox-ctrl-group {
+    vertical-align: top;
+}
+
 /* --------- Less than Extra Large Breakpoint----------- */
 @media (max-width: 1199px) {
   .fixedTop {
